# gigavector

./: .clang-format  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES_0.8.2.md  benchmark_compare.c  build_and_test.sh  main.c  mkdocs.yml  package-lock.json  test_gigavector.py
.github/workflows/: ci.yml  deploy-website.yml  python-wheels.yml  release.yml
benchmarks/: bench_ivfdisk.c  benchmark_compare.c  benchmark_ivfpq.c  benchmark_ivfpq_recall.c  benchmark_simd.c
docs/: API_KEYS_REQUIRED.md  BUILD_AND_TEST.md  api_keys_required.md  api_reference.md  architecture.md  build_and_test.md  c_api_guide.md  deployment.md  index.md  performance.md  python_bindings.md  security.md  troubleshooting.md  usage.md
docs/examples/: advanced_features.md  basic_usage.md
include/: gigavector.h
include/admin/: cache.h  cdc.h  cluster.h  migration.h  namespace.h  repl_sim.h  repl_transport.h  replication.h  shard.h  sso.h  streaming.h  timetravel.h  tracing.h  ttl.h  versioning.h  webhook.h
include/api/: alias.h  grpc.h  python_compat.h  quota.h  rest_handlers.h  schema.h  server.h  typed_metadata.h
include/core/: bloom.h  compat.h  config.h  heap.h  types.h  utils.h
include/features/: context_graph.h  geo.h  graph_db.h  json.h  json_index.h  knowledge_graph.h  recommend.h  sql.h
include/gigavector/: gigavector.h  gv_agent.h  gv_alias.h  gv_auth.h  gv_authz.h  gv_auto_embed.h  gv_backup.h  gv_bloom.h  gv_bm25.h  gv_cache.h  gv_cdc.h  gv_cluster.h  gv_compression.h  gv_conditional.h  gv_consistency.h  gv_context_graph.h  gv_crypto.h  gv_database.h  gv_dedup.h  gv_diskann.h  gv_distance.h  gv_embedded.h  gv_embedding.h  gv_exact_search.h  gv_filter.h  gv_flat.h  gv_fulltext.h  gv_geo.h  gv_gpu.h  gv_graph_db.h  gv_grpc.h  gv_heap.h  gv_hnsw.h  gv_hnsw_opt.h  gv_hybrid_search.h  gv_importance.h  gv_inference.h  gv_ivfflat.h  gv_ivfpq.h  gv_json.h  (+58 more)
include/index/: codebook.h  diskann.h  exact_search.h  flat.h  hnsw.h  hnsw_opt.h  ivfflat.h  ivfpq.h  ivfsq8.h  ivfturboquant.h  kdtree.h  lsh.h  pq.h  sparse_index.h
include/multimodal/: auto_embed.h  bm25.h  embedding.h  fulltext.h  inference.h  late_interaction.h  learned_sparse.h  llm.h  metadata_index.h  multimodal.h  multivec.h  muvera.h  onnx.h  payload_index.h  tokenizer.h
include/schema/: metadata.h  tiered_tenant.h  vector.h
include/search/: consistency.h  distance.h  filter.h  filter_ops.h  group_search.h  hybrid_search.h  importance.h  mmr.h  phased_ranking.h  ranking.h  score_threshold.h
include/security/: auth.h  authz.h  crypto.h  rbac.h  tls.h
include/specialized/: agent.h  binary_quant.h  conditional.h  dedup.h  embedded.h  gpu.h  mvcc.h  named_vectors.h  optimizer.h  point_id.h  quantization.h
include/storage/: backup.h  compression.h  database.h  disk_layout.h  disk_page_cache.h  memory_consolidation.h  memory_extraction.h  memory_layer.h  mmap.h  posting_list.h  scalar_quant.h  snapshot.h  soa_storage.h  sparse_vector.h  turboquant.h  vacuum.h  wal.h
python/: MANIFEST.in  README.md  pyproject.toml  setup.py
python/src/gigavector/: __init__.py  _core.py  _ffi.py  async_api.py  benchmark.py  pool.py
python/src/gigavector/dashboard/: __init__.py  server.py
python/src/gigavector/dashboard/backend/: __init__.py  server.py
python/src/gigavector/dashboard/frontend/: index.html
python/src/gigavector/dashboard/frontend/src/: index.js
python/src/gigavector/dashboard/frontend/styles/: style.css
python/src/gigavector/dashboard/static/: index.html  index.js
python/tests/: test_api.py  test_async_pool_benchmark.py  test_metadata.py
scripts/: build_and_test.sh
src/: gv_agent.c  gv_alias.c  gv_auth.c  gv_authz.c  gv_auto_embed.c  gv_backup.c  gv_binary_quant.c  gv_bloom.c  gv_bm25.c  gv_cache.c  gv_cdc.c  gv_cluster.c  gv_codebook.c  gv_compression.c  gv_conditional.c  gv_config.c  gv_consistency.c  gv_context_graph.c  gv_crypto.c  gv_database.c  gv_dedup.c  gv_diskann.c  gv_distance.c  gv_embedded.c  gv_embedding.c  gv_exact_search.c  gv_filter.c  gv_filter_ops.c  gv_flat.c  gv_fulltext.c  gv_geo.c  gv_gpu.c  gv_gpu_kernels.cu  gv_graph_db.c  gv_group_search.c  gv_grpc.c  gv_hnsw.c  gv_hnsw_opt.c  gv_hybrid_search.c  gv_importance.c  (+60 more)
src/admin/: cache.c  cdc.c  cluster.c  migration.c  namespace.c  repl_sim.c  repl_transport.c  replication.c  shard.c  sso.c  streaming.c  timetravel.c  tracing.c  ttl.c  versioning.c  webhook.c
src/api/: alias.c  grpc.c  python_compat.c  quota.c  rest_handlers.c  schema.c  server.c  typed_metadata.c
src/core/: bloom.c  config.c
src/features/: context_graph.c  geo.c  graph_db.c  json.c  json_index.c  knowledge_graph.c  recommend.c  sql.c
src/index/: codebook.c  diskann.c  exact_search.c  flat.c  hnsw.c  hnsw_opt.c  ivfflat.c  ivfpq.c  ivfsq8.c  ivfturboquant.c  kdtree.c  lsh.c  pq.c  sparse_index.c
src/multimodal/: auto_embed.c  bm25.c  embedding.c  fulltext.c  inference.c  late_interaction.c  learned_sparse.c  llm.c  metadata_index.c  multimodal.c  multivec.c  muvera.c  onnx.c  payload_index.c  tokenizer.c
src/schema/: metadata.c  tiered_tenant.c  vector.c
src/search/: consistency.c  distance.c  filter.c  filter_ops.c  group_search.c  hybrid_search.c  importance.c  mmr.c  phased_ranking.c  ranking.c  score_threshold.c
tests/: corrupt_snapshot.sh  corrupt_wal.sh  test_advanced.c  test_alias.c  test_auth.c  test_authz.c  test_backup.c  test_binary_quant.c  test_bloom.c  test_bm25.c  test_cache.c  test_cdc.c  test_cluster.c  test_codebook.c  test_compression.c  test_conditional.c  test_config.c  test_consistency.c  test_context_graph.c  test_crypto.c  test_database.c  test_db.c  test_dedup.c  test_diskann.c  test_distance.c  test_embedded.c  test_embedding.c  test_exact_search.c  test_filter.c  test_filter_ops.c  test_flat.c  test_fulltext.c  test_geo.c  test_graph_db.c  test_group_search.c  test_grpc.c  test_hnsw.c  test_hnsw_opt.c  test_hybrid_search.c  test_importance.c  (+55 more)
tools/: backup_cli.c  inspect_cli.c  restore_cli.c
website/: index.html  package-lock.json
(+180 files in other folders)
