[build-system]
requires = ["setuptools>=68", "wheel", "cffi>=1.16"]
build-backend = "setuptools.build_meta"

[project]
name = "gigavector"
version = "0.8.22"
description = "High-performance vector database library for Python with multiple index types and metadata support"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENCE.md" }
authors = [{ name = "GigaVector Maintainers" }]
dependencies = ["cffi>=1.16"]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
]

[project.urls]
Homepage = "https://github.com/jaywyawhare/GigaVector"
Repository = "https://github.com/jaywyawhare/GigaVector"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
	"gigavector",
	"gigavector.dashboard",
	"gigavector.dashboard.backend",
	]

include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "N"]
ignore = ["E501", "N802", "N803", "N806", "B904"]

[tool.ruff.lint.per-file-ignores]
"src/gigavector/_ffi.py" = ["E", "W", "F"]
"src/gigavector/_core.py" = ["N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.package-data]
gigavector = [
	"py.typed",
	"libGigaVector.so",
	"libGigaVector.dylib",
	"GigaVector.dll",
	
	"dashboard/frontend/index.html",
	"dashboard/frontend/assets/**/*",
	"dashboard/frontend/src/**/*",
	"dashboard/frontend/styles/**/*",

	"dashboard/backend/**/*"
	]


